abstraction of transport to allow non SN type layers to be colocated